# layer_test

./: .gitignore  README.md  pyproject.toml  research_idea_report.html  research_idea_report_3pages.html
data/: example_pair.json
data/iirc_one_pairs/: README.md  dev_one_pairs_curated_hard_50.jsonl  dev_one_pairs_curated_hard_50_audit.csv  dev_one_pairs_curated_hard_50_summary.json
data/v2.0/: README.md
data/v2.0/derived/: README.md  validation_one_pairs_150.jsonl  validation_one_pairs_150_audit.csv  validation_one_pairs_150_summary.json  validation_one_pairs_hard_negatives_48.jsonl  validation_one_pairs_unambiguous_44.jsonl
data/v2.0/splits/: ev2_test_article_ids.txt  ev2_train_article_ids.txt  ev2_validation_article_ids.txt  fix_splits.py
data/v2.0/txt_files/: PMC101395.txt  PMC102323.txt  PMC1065065.txt  PMC1065070.txt  PMC1065073.txt  PMC1065104.txt  PMC1074719.txt  PMC1079844.txt  PMC1084341.txt  PMC1087200.txt  PMC1087853.txt  PMC1090584.txt  PMC1090588.txt  PMC111061.txt  PMC111183.txt  PMC111193.txt  PMC1131903.txt  PMC1134663.txt  PMC1142309.txt  PMC1156925.txt  PMC115849.txt  PMC116601.txt  PMC1173136.txt  PMC1174877.txt  PMC1174954.txt  PMC1175098.txt  PMC1175919.txt  PMC1175929.txt  PMC1177952.txt  PMC1185549.txt  PMC1187870.txt  PMC1187893.txt  PMC1190172.txt  PMC1190216.txt  (+4419 more)
scripts/: build_evidence_inference_pairs.py  build_iirc_pairs.py  curate_iirc_pairs.py
src/insufficient_shift/: __init__.py  cli.py  metrics.py  modeling.py  reporting.py  schema.py  scoring.py
tests/: test_metrics.py  test_reporting.py  test_schema.py  test_scoring.py
