[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insufficient-shift"
version = "0.1.0"
description = "One-pair layer-wise diagnosis for insufficient-information drift in causal LMs"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.1",
  "transformers>=4.45",
  "accelerate>=0.30",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
insufficient-shift = "insufficient_shift.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

